<resources>
    <string name="app_name">Catchy</string>
    <string name="tagline">Your Personal Assistant</string>
    <string name="call">Make a Call</string>
    <string name="location">My Location</string>
    <string name="camera">Camera Take a Photo</string>
    <string name="groseryList">Grossary List</string>
    <string name="enterPhoneNo">Enter Phone Number</string>
    <string name="numberStart">08</string>
    <string name="makeCall">Call Number</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="here">here</string>
    <string name="launchCamera">Take Photo</string>
    <string name="addGroceryItem">Add Grocery Item</string>
    <string name="groceryItemName">Item Name</string>
    <string name="groceryList">My Grocery List</string>
    <string name="numberOfItems">No. of Items</string>

</resources>
