<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="android.app.navjot.catchy.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="47dp">

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heading"
            android:layout_weight="0.12"
            android:textSize="30sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tagline"
            android:text="@string/tagline"
            android:textColor="@color/sky_blue"
            android:layout_weight="1"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="74dp">

        <Button
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:background="@color/white"
            android:id="@+id/callButton"
            android:layout_weight="1"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="71dp">

        <Button
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:id="@+id/button7"
            android:layout_weight="1"
            android:background="@color/green"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="74dp">

        <Button
            android:text="@string/groseryList"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:id="@+id/grossaryButton"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="82dp">

        <Button
            android:text="@string/camera"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@color/yellow"
            android:id="@+id/cameraButton" />
    </LinearLayout>

</LinearLayout>
