<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="android.app.navjot.catchy.MyLocationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mapicon"
        android:id="@+id/imageView3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <TextView
            android:text="@string/longitude"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:text="@string/here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:id="@+id/longitude"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:id="@+id/textView7"
            android:layout_weight="2.05"
            android:textSize="30sp" />

        <TextView
            android:text="@string/here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:id="@+id/latitude"
            android:layout_weight="2.82"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>
